--- a/pipeline1/app1/guestbook-ui-svc.yaml
+++ b/pipeline1/app1/guestbook-ui-svc.yaml
@@ -1,11 +1,21 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: guestbook-ui
-  namespace: pipeline1-namespace1
+  name: testapp
 spec:
-  ports:
-  - port: 80
-    targetPort: 80
+  replicas: 1
+  revisionHistoryLimit: 3
   selector:
-    app: guestbook-ui
+    matchLabels:
+      app: testapp
+  template:
+    metadata:
+      labels:
+        app: testapp
+    spec:
+      containers:
+      - image: argoproj/rollouts-demo:blue
+        name: testapp
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 5000
