--- a/pipeline2/app1/guestbook-ui-deployment.yaml
+++ b/pipeline2/app1/guestbook-ui-deployment.yaml
@@ -1,21 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: testapp
   namespace: pipeline2-namespace1
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: guestbook-ui
+      app: testapp
   template:
     metadata:
       labels:
-        app: guestbook-ui
+        app: testapp
     spec:
       containers:
-      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
-        name: guestbook-ui
+      - image: argoproj/rollouts-demo:blue
+        name: testapp
+        imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 80
+        - containerPort: 5000
