--- a/pipeline2/app2/guestbook-ui-svc.yaml
+++ b/pipeline2/app2/guestbook-ui-svc.yaml
@@ -1,11 +1,22 @@
-apiVersion: v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: testapp
   namespace: pipeline2-namespace2
 spec:
-  ports:
-  - port: 80
-    targetPort: 80
+  replicas: 1
+  revisionHistoryLimit: 3
   selector:
-    app: guestbook-ui
+    matchLabels:
+      app: testapp
+  template:
+    metadata:
+      labels:
+        app: testapp
+    spec:
+      containers:
+      - image: argoproj/rollouts-demo:blue
+        name: testapp
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 5000
