--- a/pipeline2/pipeline/params.yaml
+++ b/pipeline2/pipeline/params.yaml
@@ -1,12 +1,12 @@
 arguments:
   parameters:
-  - name: application-name
-    value: pipeline2-app1
-  - name: application-name-2
-    value: pipeline2-app2
+  - name: application-name-dev
+    value: testapp-dev
+  - name: application-name-stag
+    value: testapp-staging
   - name: revision
-    value: HEAD
+    value: main
   - name: argocd-server-address
-    value: 35.193.141.13:80
+    value: argocd-server.argocd.svc.cluster.local
   - name: argocd-credentials-secret
-    value: argocd-credentials-secret
+    value: argocd-user
