--- a/pipeline2/pipeline/pipeline.yaml
+++ b/pipeline2/pipeline/pipeline.yaml
@@ -5,41 +5,32 @@ metadata:
     clusterName: hubcluster
 spec:
   entrypoint: starter
+  arguments:
+    parameters:
+    - name: example
+      value: example
+    - name: application-name-dev
+      value: testapp-dev
+    - name: application-name-stag
+      value: testapp-staging
+    - name: revision
+      value: main
+    - name: argocd-server-address
+      value: argocd-server.argocd.svc.cluster.local
+    - name: argocd-credentials-secret
+      value: argocd-user
   templates:
-  - name: whalesay
-    container:
-      image: docker/whalesay
-      command: [cowsay]
-      args: [hello world]
   - name: starter
     steps:
-    - - name: argocd-app1
+    - - name: deploy-to-dev-successes1
         templateRef:
           name: argocd-step
           template: argocd-sync-and-wait
         arguments:
           parameters:
           - name: application-name
-            value: '{{workflow.parameters.application-name}}'
+            value: '{{workflow.parameters.application-name-dev}}'
           - name: revision
             value: '{{workflow.parameters.revision}}'
           - name: argocd-server-address
             value: '{{workflow.parameters.argocd-server-address}}'
-    - - name: first-dummy-step
-        template: whalesay
-    - - name: argocd-app2
-        templateRef:
-          name: argocd-step
-          template: argocd-sync-and-wait
-        arguments:
-          parameters:
-          - name: application-name
-            value: '{{workflow.parameters.application-name-2}}'
-          - name: revision
-            value: '{{workflow.parameters.revision}}'
-          - name: argocd-server-address
-            value: '{{workflow.parameters.argocd-server-address}}'
-    - - name: second-dummy-step
-        template: whalesay
-
-
